--- a/src/app/modules/users-mngmt/components/users-list/users-list.component.html
+++ b/src/app/modules/users-mngmt/components/users-list/users-list.component.html
@@ -1,1 +1,59 @@
-<p>users-list works!</p>
+<div class="table-container">
+
+    <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 offset-md-6 col-lg-4 offset-lg-8">
+            <div class="form-group mb-3">
+                <div class="input-group input-group-alternative">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text"><i class="fas fa-search"></i></span>
+                    </div>
+                    <input matInput class="form-control" placeholder="Buscar" type="text" #input
+                        (keyup)="applyFilter($event)">
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="adaptable-container">
+        <table mat-table [dataSource]="dataSource">
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="name">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+            </ng-container>
+
+            <!-- Weight Email -->
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef> Correo electrónico </th>
+                <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="created_at">
+                <th mat-header-cell *matHeaderCellDef> Fecha de creación </th>
+                <td mat-cell *matCellDef="let element"> {{element.created_at | date: "dd/MMM/yyyy"}} </td>
+            </ng-container>
+
+            <!-- Other -->
+            <ng-container matColumnDef="action">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let element">
+                    <!-- <button type="button" class="btn btn-sm btn-outline-danger"
+                        (click)="selection(element)">Eliminar</button> -->
+
+                    <div class="icon-shape bg-danger text-white rounded-circle" (click)="selection(element)">
+                        <i class="ni ni-fat-delete"></i>
+                    </div>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+
+
+    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
