--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,46 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$coop-dashboard-primary: mat-palette($mat-blue);
+$coop-dashboard-accent: mat-palette($mat-blue, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$coop-dashboard-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$coop-dashboard-theme: mat-light-theme((
+  color: (
+    primary: $coop-dashboard-primary,
+    accent: $coop-dashboard-accent,
+    warn: $coop-dashboard-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($coop-dashboard-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+// CUSTOM ANGULAR MATERIAL
+
+// table
+.mat-table {
+  font-family: inherit;
+}
+
+th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
+  padding: 0 8px !important;
+}
