--- a/src/app/modules/users-mngmt/components/users-list/users-list.component.html
+++ b/src/app/modules/users-mngmt/components/users-list/users-list.component.html
@@ -32,7 +32,7 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element">
-                    <div class="icon-shape bg-danger text-white rounded-circle" (click)="selection(element)">
+                    <div class="icon-shape bg-danger text-white rounded-circle" (click)="removeUser(element)">
                         <i class="fas fa-minus"></i>
                     </div>
                 </td>
@@ -45,4 +45,14 @@
 
     </div>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
+
+    <div class="text-center mt-4">
+        <small class="text-success" *ngIf="deleteRequestStatus === 2">
+            Usuario eliminado exitosamente
+        </small>
+        <small class="text-danger" *ngIf="deleteRequestStatus === 3">
+            Ocurrió un error al eliminar el usuario: {{ errorMsg }}
+        </small>
+    </div>
 </div>
