--- a/src/app/modules/users-mngmt/components/users-list/users-list.component.html
+++ b/src/app/modules/users-mngmt/components/users-list/users-list.component.html
@@ -16,19 +16,19 @@
     <div class="adaptable-container">
         <table mat-table [dataSource]="dataSource">
 
-            <!-- Weight Email -->
+            <!-- email column -->
             <ng-container matColumnDef="email">
                 <th mat-header-cell *matHeaderCellDef> Correo electrónico </th>
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
 
-            <!-- Symbol Column -->
+            <!-- created_at column -->
             <ng-container matColumnDef="created_at">
                 <th mat-header-cell *matHeaderCellDef> Fecha de creación </th>
                 <td mat-cell *matCellDef="let element"> {{element.created_at | date: "dd/MMM/yyyy"}} </td>
             </ng-container>
 
-            <!-- Other -->
+            <!-- action column -->
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element">
@@ -38,7 +38,7 @@
                 </td>
             </ng-container>
 
-            <!-- Disclaimer column -->
+            <!-- disclaimer column -->
             <ng-container matColumnDef="disclaimer">
                 <td mat-footer-cell *matFooterCellDef colspan="3">
                     <div class="text-danger text-center" *ngIf="getRequestStatus === 3">
@@ -52,8 +52,6 @@
             <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
                 [hidden]="getRequestStatus !== 3"></tr>
         </table>
-
-
     </div>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 
