--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,6 +112,20 @@ th.mat-header-cell, td.mat-cell, td.mat-footer-cell {
 
 // **** OTHERS ****
 
+// *** sidebar ***
+::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #dee2e6;
+}
+
 // *** loaders ***
 @keyframes indeterm-shimmer {
   0% {
