use query params in country and retailer component

--- a/src/app/modules/dashboard/pages/country/country.component.html
+++ b/src/app/modules/dashboard/pages/country/country.component.html
@@ -1,1 +1,7 @@
-<p>country works!</p>
+<div class="main-container mt-4">
+    <div class="row">
+        <div class="col-12">
+            <p class="text-uppercase text-muted mb-4"><b>{{ countryName }} - Visión general</b></p>
+        </div>
+    </div>
+</div>
