--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -83,7 +83,7 @@
               {{ menuItem.title | titlecase }}
             </a>
 
-            <ul class="navbar-sub-nav" *ngIf="menuItem.submenu && menuItem.submenuOpen">
+            <ul class="navbar-sub-nav" *ngIf="menuItem.submenu && menuItem.submenuOpen && submenuReqStatus === 2">
               <li class="{{menuItemL2.class}} nav-item" *ngFor="let menuItemL2 of menuItem.submenu">
                 <a routerLinkActive="active" class="nav-link" [ngClass]="{'active' : menuItemL2 === selectedSubItem }"
                   (click)="selectItem(menuItemL2, menuItem);">
@@ -95,9 +95,10 @@
         </ng-container>
       </ul>
 
-      <div class="text-danger mt-5 pl-3 pr-3" *ngIf="menuReqStatus === 3">
+      <div class="text-danger mt-5 pl-3 pr-3" *ngIf="menuReqStatus === 3 || submenuReqStatus === 3">
         <small>
-          Ocurrió un error al consultar los países o retailers a los que tienes acceso. Intenta más tarde.
+          Ocurrió un error al consultar los {{ userRole === 'retailer' ? 'retailers' : 'países o retailers' }} a los que
+          tienes acceso. Intenta más tarde.
         </small>
       </div>
 
