update card-state styles

--- a/src/app/modules/dashboard/components/card-stat/card-stat.component.html
+++ b/src/app/modules/dashboard/components/card-stat/card-stat.component.html
@@ -13,7 +13,7 @@
         </div>
         <div class="submetric-container text-muted" *ngIf="stat.subMetricTitle">
             <div class="submetric-data">
-                <span class="text-nowrap h5 mr-2 text-muted">{{ stat.subMetricTitle }}</span>
+                <span class="text-nowrap h5 mr-2 text-muted text-uppercase">{{ stat.subMetricTitle }}</span>
                 <span>{{ stat.subMetricValue }}</span>
             </div>
         </div>
