--- a/src/app/modules/dashboard/pages/retailer/retailer.component.html
+++ b/src/app/modules/dashboard/pages/retailer/retailer.component.html
@@ -13,7 +13,7 @@
     </ul>
 
     <ng-container *ngIf="activeTabView === 1">
-        <div class="row">
+        <div class="row mb-5">
             <div class="col-12">
                 <div class="card">
                     <div class="card-body">
@@ -23,9 +23,84 @@
                 </div>
             </div>
         </div>
+        <div class="row mb-5" *ngFor="let item of [1,2,3]">
+            <div class="col-12">
+                <div class="header bg-light mb-2">
+                    <p class="h4 text-uppercase text-muted py-1 ml-3 mr-3">
+                        <ng-container [ngSwitch]="item">
+                            <b *ngSwitchCase="1">Google Search - Display & Video</b>
+                            <b *ngSwitchCase="2">Display & Video (Marketing)</b>
+                            <b *ngSwitchCase="3">Social Media</b>
+                        </ng-container>
+
+                    </p>
+                </div>
+                <div class="adaptable-container">
+                    <table mat-table [dataSource]="dataSource">
+
+                        <!-- name column -->
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef> Campaña </th>
+                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                        </ng-container>
+
+                        <!-- investment column -->
+                        <ng-container matColumnDef="investment">
+                            <th mat-header-cell *matHeaderCellDef> Inversión </th>
+                            <td mat-cell *matCellDef="let element"> {{element.investment}} </td>
+                        </ng-container>
+
+                        <!-- impressions -->
+                        <ng-container matColumnDef="impressions">
+                            <th mat-header-cell *matHeaderCellDef> Impresiones</th>
+                            <td mat-cell *matCellDef="let element"> {{element.impressions}} </td>
+                        </ng-container>
+
+                        <!-- clicks -->
+                        <ng-container matColumnDef="clicks">
+                            <th mat-header-cell *matHeaderCellDef> Clicks</th>
+                            <td mat-cell *matCellDef="let element"> {{element.clicks}} </td>
+                        </ng-container>
+
+                        <!-- CTR -->
+                        <ng-container matColumnDef="ctr">
+                            <th mat-header-cell *matHeaderCellDef> CTR</th>
+                            <td mat-cell *matCellDef="let element"> {{element.ctr}} </td>
+                        </ng-container>
+
+                        <!-- CPM -->
+                        <ng-container matColumnDef="cpm">
+                            <th mat-header-cell *matHeaderCellDef> CPM</th>
+                            <td mat-cell *matCellDef="let element"> {{element.cpm}} </td>
+                        </ng-container>
+
+                        <!-- CPC -->
+                        <ng-container matColumnDef="cpc">
+                            <th mat-header-cell *matHeaderCellDef> CPC</th>
+                            <td mat-cell *matCellDef="let element"> {{element.cpc}} </td>
+                        </ng-container>
+
+                        <!-- disclaimer column -->
+                        <ng-container matColumnDef="disclaimer">
+                            <td mat-footer-cell *matFooterCellDef colspan="3">
+                                <div class="text-danger text-center" *ngIf="getReqStatus === 3">
+                                    Ocurrió un error al consultar los usuarios
+                                </div>
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                        <tr mat-footer-row *matFooterRowDef="['disclaimer']" class="example-second-footer-row"
+                            [hidden]="getReqStatus !== 3"></tr>
+                    </table>
+                </div>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </div>
+        </div>
     </ng-container>
 
     <ng-container *ngIf="activeTabView === 2">
-        Tab 2
+        Campaña en el retail
     </ng-container>
 </div>
