--- a/src/app/modules/dashboard/components/general-filters/general-filters.component.html
+++ b/src/app/modules/dashboard/components/general-filters/general-filters.component.html
@@ -1,14 +1,16 @@
 <div class="row">
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
-        <small class="text-muted mb-1"><b>Periodo</b></small>
-        <mat-form-field appearance="fill">
-            <mat-date-range-input [rangePicker]="picker">
-                <input matStartDate placeholder="Fecha inicio">
-                <input matEndDate placeholder="Fecha fin">
-            </mat-date-range-input>
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-date-range-picker #picker></mat-date-range-picker>
-        </mat-form-field>
+        <div class="date-picker">
+            <small class="text-muted mb-1"><b>Periodo</b></small>
+            <mat-form-field appearance="fill">
+                <mat-date-range-input [rangePicker]="picker">
+                    <input matStartDate placeholder="Fecha inicio">
+                    <input matEndDate placeholder="Fecha fin">
+                </mat-date-range-input>
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+            </mat-form-field>
+        </div>
     </div>
     <div class="col-12 col-sm-6 col-lg-3 mb-4">
         <small class="text-muted mb-1"><b>Sector</b></small>
